--- a/public/lab_3/style.css
+++ b/public/lab_3/style.css
@@ -1,16 +1,21 @@
 /* || General setup */
 
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
 html, body {
   margin: 0;
   padding: 0;
 }
 
-
 html {
   font-size: 10px;
 
 }
-
 
 body {
   width: 70%;
