--- a/public/lab_4/styles.css
+++ b/public/lab_4/styles.css
@@ -9,13 +9,14 @@ html, body {
     font-size: 10px;
   
   }
-  
-  body {
+ 
+body {
     width: 70%;
     min-width: 800px;
     margin: 0 auto;
     background-color: #6091C3;
   }
+
   
   /* || typography */
   
@@ -73,7 +74,45 @@ html, body {
     flex: 5;
     text-transform: uppercase;
   }
+  ul.flex-outer{max-width: 800px;
+    padding: 0px 16px;}
+
+  .flex-outer li,
+  .flex-inner {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+    
+    
+  .flex-outer > li > label,
+  .flex-outer li p {
+    flex: 1 0 125px;
+    max-width: 225px;
+    padding:8px;
+  }
+     
+  .flex-outer > li > label + *,
+  .flex-inner {
+    flex: 1 0 225px;
+    padding: 8px;
+  }
   
+  .flex-outer > li> button {
+    margin-left: 0px;
+    padding: 6px 12px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    border-radius: 3px;
+  }
+
+  .flex-inner {
+    justify-content: space-between;
+  }
+
+.flex-inner>li {
+  width: 80px;
+}
   .header img {
     display: block;
     height: 60px;
