--- a/public/asst-1/styles.css
+++ b/public/asst-1/styles.css
@@ -6,8 +6,8 @@
   font-size: 30px;
 }
 .header img {
-  width: 100%;
-  height: 100px;}
+  width: 300px;
+  height: 220px;}
 
 
 .wrapper {
@@ -28,4 +28,16 @@
 
   padding-right: 10px;
   padding-left:  10px;
+}
+
+body {
+  width: 70%;
+  min-width: 800px;
+  margin: 0 auto;
+  background-color: #6091C3;
+}
+
+.body img{
+  width: 300px;
+  height: 440px;
 }
