--- a/public/asst-1/styles.css
+++ b/public/asst-1/styles.css
@@ -1,40 +1,33 @@
 .header {
   padding: 60px;
   text-align: center;
-  background: #1abc9c;
-  color: white;
+  background:#A63272;
+  color: rgb(144, 214, 226);
   font-size: 30px;
 }
 .header img {
   width: 300px;
-  height: 220px;}
+  height: 220px;
+  margin-bottom: 4px;}
 
 
 .wrapper {
-  margin-right: auto; 
-  margin-left:  auto; 
-
-  max-width: 960px; 
-
-  padding-right: 10px;
-  padding-left:  10px;
+  display: flex; 
+  flex-direction: column; 
+  align-items: center
 }
 
 .container {
-  margin-right: auto; 
-  margin-left:  auto; 
-
   max-width: 960px; 
-
-  padding-right: 10px;
-  padding-left:  10px;
+  display: flex; 
+  flex-wrap: wrap;
 }
 
 body {
   width: 70%;
   min-width: 800px;
   margin: 0 auto;
-  background-color: #6091C3;
+  background-color: #42A63F;
 }
 
 .body img{
