--- a/public/asst-1/styles.css
+++ b/public/asst-1/styles.css
@@ -1,12 +1,13 @@
 .header {
-  padding: 60px;
-  text-align: center;
+  padding: 6px;
+  text-align: left;
   background:#A63272;
   color: rgb(144, 214, 226);
-  font-size: 30px;
+  font-size: 22px;
 }
 .header img {
   width: 300px;
+  position: right;
   height: 220px;
   margin-bottom: 4px;}
 
@@ -21,6 +22,7 @@
   max-width: 960px; 
   display: flex; 
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 body {
@@ -33,4 +35,9 @@ body {
 .body img{
   width: 300px;
   height: 440px;
+}
+
+h1, h2, h3 {
+  font-family: 'Comfortaa', cursive;
+  color: #2a2a2a;
 }
