--- a/public/asst-1/styles.css
+++ b/public/asst-1/styles.css
@@ -1,21 +1,28 @@
 .header {
-  padding: 6px;
+  padding: 15px;
   text-align: left;
   background:#A63272;
   color: rgb(144, 214, 226);
   font-size: 22px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 .header img {
   width: 300px;
   position: right;
   height: 220px;
+  border-radius: 4px;
   margin-bottom: 4px;}
 
 
 .wrapper {
   display: flex; 
   flex-direction: column; 
-  align-items: center
+  align-items: center;
+  
 }
 
 .container {
@@ -23,13 +30,14 @@
   display: flex; 
   flex-wrap: wrap;
   align-items: flex-start;
+  justify-content: center;
 }
 
 body {
   width: 70%;
   min-width: 800px;
   margin: 0 auto;
-  background-color: #42A63F;
+  background-color:#C8F3F5;
 }
 
 .body img{
@@ -40,4 +48,16 @@ body {
 h1, h2, h3 {
   font-family: 'Comfortaa', cursive;
   color: #2a2a2a;
+}
+
+.column {
+  float: left;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
 }
