--- a/public/asst-1/styles.css
+++ b/public/asst-1/styles.css
@@ -2,6 +2,7 @@
   padding: 15px;
   text-align: left;
   background:#A63272;
+  flex-direction: row;
   color: rgb(144, 214, 226);
   font-size: 22px;
   margin-bottom: 15px;
@@ -30,6 +31,7 @@
   display: flex; 
   flex-wrap: wrap;
   align-items: flex-start;
+  flex: row;
   justify-content: center;
 }
 
@@ -41,8 +43,9 @@ body {
 }
 
 .body img{
-  width: 300px;
-  height: 440px;
+  width: 250px;
+  height: 400px;
+  border-radius: 4px;
 }
 
 h1, h2, h3 {
@@ -50,14 +53,15 @@ h1, h2, h3 {
   color: #2a2a2a;
 }
 
-.column {
-  float: left;
+.one {
+  flex: 0 1 auto;
+  width: 175px;
+  margin-right: 15px;
 }
 
-.left {
-  width: 25%;
-}
-
-.right {
-  width: 75%;
+.two{
+  flex: 0 2 auto;
+  border-radius: 4px;
+  padding: 15;
+  border: dashed 1px; 
 }
